<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:contentDescription="@string/desc_img_logo"
            android:focusable="false"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/poster_infinity_war" />

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="@dimen/_85sdp"
            android:layout_height="@dimen/_105sdp"
            android:layout_marginTop="@dimen/_100sdp"
            android:contentDescription="@string/desc_img_movie"
            android:elevation="@dimen/_6sdp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/poster_infinity_war" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/dummy_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster" />

        <TextView
            android:id="@+id/tv_duration"
            style="@style/Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/dummy_duration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_genre"
            style="@style/Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/dummy_genre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_duration" />

        <TextView
            android:id="@+id/tv_release_date"
            style="@style/Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:drawablePadding="@dimen/_4sdp"
            android:gravity="start|center_vertical"
            android:text="@string/dummy_release_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

        <TextView
            android:id="@+id/tv_rating"
            style="@style/Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:drawablePadding="@dimen/_4sdp"
            android:gravity="start|center_vertical"
            android:text="@string/dummy_rating"
            app:drawableEndCompat="@drawable/ic_star"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />

        <TextView
            android:id="@+id/tv_overview"
            style="@style/Subtitle2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            android:justificationMode="inter_word"
            android:text="@string/dummy_overview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_rating"
            tools:targetApi="o" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>